5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1621_2937.log
== TEST (2019-04-01 19:28:21) 
-- CODE:
t=float(input("grauscelsius:"))
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
t = ((p*v)//n*R)-273.1
v = (n*R*(t+273.1))//p
n = ((p*v))//R*(t+273.1)
print(n)
print(v)
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:28:29) 
-- CODE:
t=float(input("grauscelsius:"))
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
t = ((p*v)//n*R)-273.1
v = (n*R*(t+273.1))//p
n = ((p*v))//R*(t+273.1)
print(n)
print(v)
print(t)

-- EXECUTION TIME:
0.106801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 5, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:28:46) 
-- CODE:
t=float(input("temperatura:"))
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
t = ((p*v)//n*R)-273.1
v = (n*R*(t+273.1))//p
n = ((p*v))//R*(t+273.1)
print(n)
print(v)
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:29:13) 
-- CODE:

R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
t = ((p*v)//n*R)-273.1
v = (n*R*(t+273.1))//p
n = ((p*v))//R*(t+273.1)
print(n)
print(v)
print(t)

-- EXECUTION TIME:
0.156522
-- TEST CASE 1:
---- input:
1
320.0
20.0
---- correct output:
0.07515908343750001
---- user output:
31.50988799999959
2.0
-271.78708800000004
-- TEST CASE 2:
---- input:
5
155.8
80.0
---- correct output:
0.9298564409499358
---- user output:
0.0
0.0
-272.361487
-- TEST CASE 3:
---- input:
12
1220.0
30.0
---- correct output:
0.244637475737705
---- user output:
46811.220903999994
8.0
-233.05618400000003
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:08) 
-- CODE:
T=float(input("temperatura:"))
F=273.1
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:12) 
-- CODE:
T=float(input("temperatura:"))
F=273.1
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- EXECUTION TIME:
0.146794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 6, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:26) 
-- CODE:
T=int(input("temperatura:"))
F=273.1
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- EXECUTION TIME:
0.142059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 6, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:28) 
-- CODE:
T=int(input("temperatura:"))
F=273.1
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:04) 
-- CODE:

F=273.1
R=0.082057
p=float(input("presão do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- OUTPUT:
31.50988799999959
2.0
-271.78708800000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:18) 
-- CODE:

F=273.1
R=0.082057
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- OUTPUT:
31.50988799999959
2.0
-271.78708800000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:05) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:08) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
v = (n*R*(T+F))//p
n = ((p*v))//R*(T+F)
print(n)
print(v)
print(T)

-- EXECUTION TIME:
0.161748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:42) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:38:45) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- EXECUTION TIME:
0.210285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:40:17) 
-- CODE:

F=273.1
R=(0.082057)*(l)*(k**-1)*(mol**-1)
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- EXECUTION TIME:
0.218776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 3, in <module>
    R=(0.082057)*(l)*(k**-1)*(mol**-1)
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:19) 
-- CODE:

F=273.1
R=(0.082057)*(l)*(k**-1)*(mol**-1)
t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    R=(0.082057)*(l)*(k**-1)*(mol**-1)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:13) 
-- CODE:

F=273.1

t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- EXECUTION TIME:
0.136034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:15) 
-- CODE:

F=273.1

t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:33) 
-- CODE:

F=273.1

t=float(input("temperatura do gas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:41) 
-- CODE:

F=273.1

t=float(input("temperaturadogas:"))
p=float(input("presao do gas:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:53:45) 
-- CODE:

F=273.1

t=float(input("temperatura:"))
p=float(input("presao:"))
v = float(input("volume de um gas:"))
n = float(input("numero de mols de um gas:"))
T = ((p*v)//n*R)-F
V = (n*R*(T+F))//p
N = ((p*v))//R*(T+F)
print(N)
print(V)
print(T)

-- EXECUTION TIME:
0.142069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:50) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura:"))
p=float(input("presao:"))
v = float(input("volume:"))
n = float(input("mols:"))
T = ((p*v)//n*R)-F
V = (n*R*(t+F))//p
N = ((p*v))//R*(t+F)
print(N)
print(V)
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:53) 
-- CODE:

F=273.1
R=0.082057
t=float(input("temperatura:"))
p=float(input("presao:"))
v = float(input("volume:"))
n = float(input("mols:"))
T = ((p*v)//n*R)-F
V = (n*R*(t+F))//p
N = ((p*v))//R*(t+F)
print(N)
print(V)
print(T)

-- EXECUTION TIME:
0.13159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 7, in <module>
    n = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
